--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       rel="stylesheet"
     />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+    </link>
   </head>
   <body>
     <app-root></app-root>
